# RayTracing-Opengl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ProjektGrafika/: CMakeLists.txt
ProjektGrafika/Source/: Assert.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  ProjektGrafika.cpp  ProjektGrafika.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.h  UBO.h
ProjektGrafika/res/Shaders/: ComputeShader.glsl  fragment.shader  vertex.shader
